@@ -1,6 +1,10 @@
 ggplot2 0.9.3.1.99
 ----------------------------------------------------------------
 
+* `geom_boxplot` gain new `varwidth` argument for controlling whether or not 
+  the width of boxplots should be proportional to the size of the groups 
+  (@tsieger, #927).
+
 * Allow specifying only one of the limits in a scale and use the automatic
   calculation of the other limit by passing NA to to the limit function,
   `xlim()` or `ylim()` (@jimhester, #557).
